--- a/SecureCoding/AndroidManifest.xml
+++ b/SecureCoding/AndroidManifest.xml
@@ -34,7 +34,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sample" >
+        android:theme="@style/Theme.Sample" 
+        android:debuggable="false">
         <activity
             android:name="default.MainActivity"
             android:label="@string/app_name"
